--- a/src/assets/css/sidebar-rwd.css
+++ b/src/assets/css/sidebar-rwd.css
@@ -1,64 +1,51 @@
-@media screen and (width <= 1200px) {
-    .sidebar {
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        z-index: 999;
-        display: flex;
-        padding: 0px;
-      }
-    
-      .logo {
-        display: none;
-      }
-    
-      .menu {
-        display: flex;
-      }
-    
-      .menu-item {
-        padding: 8px 12px 12px;
-        position: relative;
-        height: 100%;
-        box-sizing: border-box;
-      }
-    
-      .menu-item::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 150%;
-        background-image: linear-gradient(to bottom, transparent, #000 45%);
-        z-index: -99;
-        opacity: 0.94;
-      }
-    
-      .menu-item:nth-child(5) {
-        display: none;
-      }
-    
-      .menu-item:nth-child(6) {
-        display: block;
-      }
-    
-      .menu-item:nth-child(7) {
-        display: block;
-      }
-    
-      .menu-item a {
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-      }
-    
-      .menu-item a p {
-        font-size: 9px;
-        line-height: 13.5px;
-      }
-    
-      .translate-btn {
-        display: none;
-      }
+@media screen and (width < 1200px) {
+  #sidebar {
+    width: 100%;
+    max-height: 65.5px;
+    position: fixed;
+    bottom: 0;
+    z-index: 999;
+    display: flex;
+    padding: 0px;
+  }
+
+  .sidebar-head {
+    display: none;
+  }
+
+  .sidebar-menu {
+    display: flex;
+    width: 100%;
+    margin: 0px;
+  }
+
+  .sidebar-menu > li {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+  }
+
+  .sidebar-menu li h2 {
+    font-size: 9px;
+  }
+
+  .sidebar-menu a {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 8px 12px 12px;
+    box-sizing: border-box;
+  }
+
+  #translate-btn {
+    display: none;
+  }
+
+  #translate-btn + p {
+    display: none;
+  }
 }
